# esp-idf-wifi-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md
.circleci/: config.yml
assets/: config_page.html
dockerfiles/: dev
examples/basic/: CMakeLists.txt
examples/basic/main/: CMakeLists.txt  basic.cpp
examples/clear-config/: CMakeLists.txt
examples/clear-config/main/: CMakeLists.txt  clear-config.cpp
include/: assets.hpp  constants.hpp  esp_idf_wifi_manager.hpp  my_abort.hpp  types.hpp
src/: assets.cpp  esp_idf_wifi_manager.cpp  my_abort.cpp
test/: CMakeLists.txt
test/mock/: assets.cpp  esp_err.h  esp_http_server.cpp  esp_http_server.h  esp_log.h  esp_netif.cpp  esp_netif.h  esp_timer.cpp  esp_timer.h  esp_wifi.cpp  esp_wifi.h  http_parser.h  my_abort.cpp  nvs_flash.cpp  nvs_flash.h  nvs_handle.cpp  nvs_handle.hpp
test/mock/freertos/: FreeRTOS.cpp  FreeRTOS.h  task.cpp  task.h
test/mock/lwip/: sockets.cpp  sockets.h
test/src/: esp_idf_wifi_manager_test.cpp
